--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "todo-app-offline",
+  "name": "todo-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "http-status-codes": "^2.1.4",
+    "moment": "^2.29.1",
     "serverless-dynamodb-local": "^0.2.35",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "aws-sdk": "^2.1046.0",
+    "jest": "^27.4.5",
+    "serverless-export-env": "github:arabold/serverless-export-env",
     "serverless-offline": "^8.3.1"
   }
 }
