--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "aws-sdk": "^2.1046.0",
     "jest": "^27.4.5",
+    "serverless-aws-documentation": "^1.1.0",
     "serverless-export-env": "github:arabold/serverless-export-env",
     "serverless-offline": "^8.3.1"
   }
