--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jest": "^27.4.5",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-export-env": "github:arabold/serverless-export-env",
+    "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-offline": "^8.3.1"
   }
 }
